Finish nav and add core, shared path

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,11 @@
     "lib": [
       "es2020",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@ap/core/*": ["src/app/core/*"],
+      "@ap/shared/*": ["src/app/shared/*"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
